# learn-rust-by-building-ruff

./: Makefile  README.md  pyproject.toml
images/: note.md
src/ruff_in_python/: check.py  linter.py  main.py  message.py  parser.py  scratch.ipynb
tests/: bar.py  test_parse.py
