[project]
name = "ruff-in-python"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Nok Lam Chan", email = "mediumnok@gmail.com"},
]
dependencies = [
    "rich>=13.9.4",
    "typer>=0.15.1",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
